samples/_failures_safe/1761305655_730110_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7d387ab.c: In function ‘main’:
./samples/SAFE/__tmp_e7d387ab.c:160:29: error: missing terminating " character
  160 |         add_log_entry(logs, "
      |                             ^
./samples/SAFE/__tmp_e7d387ab.c:160:9: error: expected expression at end of input
  160 |         add_log_entry(logs, "
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_e7d387ab.c:160:9: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_e7d387ab.c:63:5: note: declared here
   63 | int add_log_entry(LogCollection* collection, const char* timestamp,
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_e7d387ab.c:160:9: error: expected declaration or statement at end of input
  160 |         add_log_entry(logs, "
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_e7d387ab.c:160:9: error: expected declaration or statement at end of input
